标识服务项目描述

--- a/jeemodel-unit/jeemodel-unit-idcode/jeemodel-unit-idcode-client/pom.xml
+++ b/jeemodel-unit/jeemodel-unit-idcode/jeemodel-unit-idcode-client/pom.xml
@@ -9,7 +9,7 @@
 
 	<artifactId>jeemodel-unit-idcode-client</artifactId>
 	<name>jeemodel-unit-idcode-client</name>
-	<description>jeemodel-unit-idcode-client</description>
+	<description>客户端-client</description>
 
 	<dependencies>
 		<!-- idcode-公共服务 -->
