--- a/jeemodel-admin/pom.xml
+++ b/jeemodel-admin/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.jeemodel</groupId>
 		<artifactId>jeemodel-parent</artifactId>
-		<version>JM202207X</version>
+		<version>JM20220705</version>
 	</parent>
 	
 	<artifactId>jeemodel-admin</artifactId>
