--- a/jeemodel-app/pom.xml
+++ b/jeemodel-app/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.jeemodel</groupId>
 		<artifactId>jeemodel-parent</artifactId>
-		<version>JM202207X</version>
+		<version>JM20220705</version>
 	</parent>
 	
 	<version>1990</version>
