--- a/jeemodel-solution/jeemodel-solution-boot/pom.xml
+++ b/jeemodel-solution/jeemodel-solution-boot/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.jeemodel</groupId>
 		<artifactId>jeemodel-solution</artifactId>
-		<version>JM202207X</version>
+		<version>JM20220705</version>
 	</parent>
 	
 	<artifactId>jeemodel-solution-boot</artifactId>
