--- a/jeemodel-solution/jeemodel-solution-captcha/pom.xml
+++ b/jeemodel-solution/jeemodel-solution-captcha/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.jeemodel</groupId>
 		<artifactId>jeemodel-solution</artifactId>
-		<version>JM202207X</version>
+		<version>JM20220705</version>
 	</parent>
 	<artifactId>jeemodel-solution-captcha</artifactId>
 	<name>jeemodel-solution-captcha</name>
