--- a/jeemodel-solution/jeemodel-solution-microservice/pom.xml
+++ b/jeemodel-solution/jeemodel-solution-microservice/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.jeemodel</groupId>
     <artifactId>jeemodel-solution</artifactId>
-    <version>JM202207X</version>
+    <version>JM20220705</version>
   </parent>
   <artifactId>jeemodel-solution-microservice</artifactId>
   <name>jeemodel-solution-microservice</name>
