--- a/jeemodel-solution/jeemodel-solution-netty/pom.xml
+++ b/jeemodel-solution/jeemodel-solution-netty/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.jeemodel</groupId>
 		<artifactId>jeemodel-solution</artifactId>
-		<version>JM202207X</version>
+		<version>JM20220705</version>
 	</parent>
 
 	<artifactId>jeemodel-solution-netty</artifactId>
