--- a/jeemodel-unit/jeemodel-unit-gen/pom.xml
+++ b/jeemodel-unit/jeemodel-unit-gen/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.jeemodel</groupId>
     <artifactId>jeemodel-unit</artifactId>
-    <version>JM202207X</version>
+    <version>JM20220705</version>
   </parent>
   <artifactId>jeemodel-unit-gen</artifactId>
   <name>jeemodel-unit-gen</name>
