--- a/jeemodel-unit/jeemodel-unit-idcode/jeemodel-unit-idcode-client/pom.xml
+++ b/jeemodel-unit/jeemodel-unit-idcode/jeemodel-unit-idcode-client/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.jeemodel</groupId>
 		<artifactId>jeemodel-unit-idcode</artifactId>
-		<version>JM202207X</version>
+		<version>JM20220705</version>
 	</parent>
 
 	<artifactId>jeemodel-unit-idcode-client</artifactId>
